--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
-} */ */
+} */ 
 
 /*** CUSTOM STYLES ****/
 
@@ -68,4 +68,8 @@ li, p {
   color: white;
   border-radius: 1px;
   margin: 0 5px 0 5px;
+}
+
+.secondary {
+  background-color: darkcyan;
 }
