--- a/src/App.css
+++ b/src/App.css
@@ -54,19 +54,19 @@ table {
 }
 
 h1 {
-  font-size: 15px;
+  font-size: 30px;
 }
 
 li, p {
-  font-size: 8px;
+  font-size: 18px;
 }
 
 .btn {
-  width: 70px;
-  font-size: 5px;
+  width: 200;
+  font-size: 18px;
   background-color: black;
   color: white;
-  border-radius: 1px;
+  border-radius: 5px;
   margin: 0 5px 0 5px;
 }
 
